--- a/blocks/popup/__heading/popup__heading.css
+++ b/blocks/popup/__heading/popup__heading.css
@@ -1,9 +1,9 @@
 .popup__heading {
 	margin: 0;
+	padding: 0 51px 18px 0;
 	font-weight: 900;
 	font-size: 24px;
 	line-height: 1.20;
-	padding-bottom: 18px;
 }
 
 @media (max-width:1100px) {
@@ -13,8 +13,14 @@
 	}
 }
 
+@media (max-width:990px) {
+	.popup__heading {
+		padding: 0 25 18px;
+	}
+}
+
 @media (max-width:545px) {
 	.popup__heading {
-		padding-bottom: 33px;
+		padding: 0 8px 43px 0;
 	}
 }
