--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,6 +1,7 @@
 .popup__input {
 	width: 100%;
-	padding: 5px 0 8px;
+	margin-top: 25px;
+	padding: 6px 0 8px;
 	border: none;
 	font-weight: 400;
 	font-size: 14px;
@@ -10,13 +11,13 @@
 	transition: all 0.1s ease-in-out;
 }
 
-@media (max-width: 545px) {
-	.popup__input {
-		padding: 0;
-	}
-}
-
 .popup__input:focus {
 	outline: 3px solid #7995ca;
 	border-radius: 2px;
+}
+
+@media (max-width:545px) {
+	.popup__input {
+		margin-top: 32px;
+	}
 }
