--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -17,8 +17,8 @@
 @media (max-width: 768px) {
 	.profile__edit-button {
 		background-size: contain;
-		min-width: 18px;
-		min-height: 18px;
+		width: 18px;
+		height: 18px;
 		transform: translate(13px, 0px);
 	}
 }
