--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -10,12 +10,18 @@
 	max-width: 336px;
 }
 
-@media (max-width: 695px) {
+@media (max-width: 770px) {
+	.profile__info {
+		max-width: 282px;
+		padding-left: 18px;
+	}
+}
+
+@media (max-width: 720px) {
 	.profile__info {
 		margin: 0 auto;
 		row-gap: 7px;
 		column-gap: 10px;
-		max-width: 282px;
 		padding: 26px 0 32px;
 		text-align: center;
 	}
