--- a/pages/index.css
+++ b/pages/index.css
@@ -29,6 +29,7 @@
 @import url(../blocks/elements/__like-button/elements__like-button.css);
 
 @import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__text/footer__text.css);
 
 @import url(../blocks/popup/popup.css);
 @import url(../blocks/popup/__container/popup__container.css);
