feat: js add cards and remove

--- a/blocks/elements/__like-button/elements__like-button.css
+++ b/blocks/elements/__like-button/elements__like-button.css
@@ -3,17 +3,9 @@
 	width: 22px;
 	padding: 0;
 	border: none;
-	background-color: transparent;
 	align-self: center;
+  background: url(../../../images/__like-disabled.svg) center no-repeat;
 	transition: opacity 0.5s ease-out;
-}
-
-.elements__like-button_disabled {
-	background-image: url("../../../images/__like-disabled.svg");
-}
-
-.elements__like-button_active {
-	background-image: url("../../../images/__like-active.svg");
 }
 
 .elements__like-button:hover {
