--- a/blocks/popup/__heading/popup__heading.css
+++ b/blocks/popup/__heading/popup__heading.css
@@ -1,6 +1,7 @@
 .popup__heading {
 	margin: 0;
 	padding: 0 51px 18px 0;
+  min-width: 306px;
 	font-weight: 900;
 	font-size: 24px;
 	line-height: 1.20;
@@ -19,8 +20,15 @@
 	}
 }
 
-@media (max-width:545px) {
+@media (max-width:701px) {
 	.popup__heading {
-		padding: 0 8px 43px 0;
+		min-width: 229px;
+    padding: 0 8px 43px 0;
 	}
 }
+
+/* @media (max-width:545px) {
+	.popup__heading {
+		
+	}
+} */
