--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,5 +1,4 @@
 .popup {
-	display: none;
   justify-content: center;
   align-items: center;
 	position: fixed;
@@ -8,4 +7,7 @@
 	width: 100%;
 	height: 100%;
 	background: rgba(0, 0, 0, 0.5);
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0.6s, opacity 0.3s linear;
 }
