--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,4 +1,5 @@
 .popup {
+  display: flex;
   justify-content: center;
   align-items: center;
 	position: fixed;
@@ -9,5 +10,5 @@
 	background: rgba(0, 0, 0, 0.5);
   visibility: hidden;
   opacity: 0;
-  transition: visibility 0.6s, opacity 0.3s linear;
+  transition: visibility 0.3s, opacity 0.3s linear;
 }
