--- a/pages/index.css
+++ b/pages/index.css
@@ -40,7 +40,12 @@
 @import url(../blocks/popup/__heading/popup__heading.css);
 @import url(../blocks/popup/__input/popup__input.css);
 @import url(../blocks/popup/__save/popup__save.css);
+@import url(../blocks/popup/__save/_type/popup__save_type_inactive.css);
 @import url(../blocks/popup/__close/popup__close.css);
+@import url(../blocks/popup/__input-error/popup__input-error.css);
+@import url(../blocks/popup/__input-error/_active/popup__input-error_active.css);
+
 
 @import url(../blocks/popup/__opened-image/popup__opened-image.css);
 @import url(../blocks/popup/__opened-title/popup__opened-title.css);
+
