--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -49,3 +49,4 @@
 @import url(../blocks/popup/__opened-image/popup__opened-image.css);
 @import url(../blocks/popup/__opened-title/popup__opened-title.css);
 
+@import url(../blocks/popup/_type/popup_type_image.css);
