--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -20,6 +20,7 @@
 @import url(../blocks/profile/__edit-button/profile__edit-button.css);
 @import url(../blocks/profile/__subtitle/profile__subtitle.css);
 @import url(../blocks/profile/__add-button/profile__add-button.css);
+@import url(../blocks/profile/__edit-avatar/profile__edit-avatar.css);
 
 @import url(../blocks/elements/elements.css);
 @import url(../blocks/elements/__element/elements__element.css);
@@ -28,6 +29,8 @@
 @import url(../blocks/elements/__info/elements__info.css);
 @import url(../blocks/elements/__caption/elements__caption.css);
 @import url(../blocks/elements/__like-button/elements__like-button.css);
+@import url(../blocks/elements/__like-section/elements__like-section.css);
+@import url(../blocks/elements/__like-counter/elements__like-counter.css);
 @import url(../blocks/elements/__like-button/_disabled/elements__like-button_disabled.css);
 
 @import url(../blocks/footer/footer.css);
