--- a/main.css
+++ b/main.css
@@ -7,15 +7,15 @@
 .header__logo{display:block;padding-bottom:4.546%}@media (max-width:768px){.header__logo{padding-left:8.44%}}@media (max-width:450px){.header__logo{padding-bottom:9.878%;width:32.42%}}
 .content{width:68.75%}@media (max-width:975px){.content{width:85%}}@media (max-width:455px){.content{width:100%}}
 .profile{align-items:center;display:flex;justify-content:space-between;padding-bottom:51px;padding-top:40px}@media (max-width:695px){.profile{flex-direction:column;padding-bottom:36px;padding-top:42px}}
-.profile__avatar{height:100%;-o-object-fit:cover;object-fit:cover;width:100%}
+.profile__avatar{height:100%;-o-object-fit:cover;object-fit:cover;width:100%}.profile__avatar:hover{opacity:1;visibility:visible}
 .profile__info{align-items:baseline;-moz-column-gap:19px;column-gap:19px;display:grid;grid-template-areas:"title button" "subtitle subtitle";margin-right:auto;max-width:336px;padding-left:30px;row-gap:8px}@media (max-width:780px){.profile__info{max-width:282px;padding-left:18px}}@media (max-width:695px){.profile__info{-moz-column-gap:10px;column-gap:10px;margin:0 auto;padding:26px 0 32px;row-gap:7px;text-align:center}}
 .hide-text{overflow:hidden;text-overflow:ellipsis;white-space:nowrap}
 .profile__title{font-size:42px;font-weight:500;grid-area:title;line-height:1.14;margin:0}@media (max-width:768px){.profile__title{font-size:27px;line-height:1.22}}@media (max-width:695px){.profile__title{transform:translate(13px)}}
 .profile__edit-button{background-color:#000;background-image:url(images/__edit-button1.7fe9b5682501835c5843.svg);border:0;grid-area:button;height:24px;justify-self:end;transition:opacity .5s ease-out;width:24px}.profile__edit-button:hover{cursor:pointer;opacity:.6}@media (max-width:768px){.profile__edit-button{background-size:contain;height:18px;transform:translate(10px);width:18px}}
 .profile__subtitle{font-size:18px;font-weight:400;grid-area:subtitle;line-height:1.22;margin:0}@media (max-width:768px){.profile__subtitle{font-size:14px;line-height:1.21}}
 .profile__add-button{background-color:#000;background-image:url(images/__add-button1.f34d323566f1bc15c056.svg);border:0;min-height:50px;min-width:150px;padding:0;transition:opacity .5s ease-out}.profile__add-button:hover{cursor:pointer;opacity:.6}@media (max-width:695px){.profile__add-button{background-image:url(images/__add-button2.3dc7f950a399797dd301.svg);min-width:282px}}
-.profile__avatar-container{border-radius:50%;height:120px;margin-right:30px;overflow:hidden;position:relative;width:120px}@media screen and (max-width:767px){.profile__avatar-container{margin-right:0}}.profile__avatar-container:hover>.profile__avatar-button{opacity:1;visibility:visible}
-.profile__avatar-button{background-color:rgba(0,0,0,.8);background-image:url(images/edit-avatar.5b07a93637363fa9b217.svg);background-position:50%;background-repeat:no-repeat;border:none;border-radius:50%;bottom:0;cursor:pointer;left:0;margin:auto;opacity:0;position:absolute;right:0;top:0;visibility:hidden}
+.profile__avatar-container{border-radius:50%;height:120px;overflow:hidden;position:relative;width:120px}.profile__avatar-container:hover>.profile__avatar-button{opacity:1;visibility:visible}
+.profile__avatar-button{background:url(images/edit-avatar.5b07a93637363fa9b217.svg) no-repeat 50% rgba(0,0,0,.8);border:none;bottom:0;cursor:pointer;left:0;opacity:0;position:absolute;right:0;top:0;transition:opacity .5s ease-out;visibility:hidden}
 .elements{-moz-column-gap:17px;column-gap:17px;display:grid;grid-template-columns:repeat(auto-fit,282px);justify-content:space-around;list-style-type:none;margin:0;padding-bottom:66px;padding-left:0;row-gap:20px}@media (max-width:695px){.elements{padding-bottom:48px}}
 .elements__element{margin:0;position:relative}
 .elements__image{border-radius:10px 10px 0 0;cursor:pointer;display:block;height:282px;-o-object-fit:cover;object-fit:cover;width:100%}
@@ -24,7 +24,6 @@
 .elements__caption{color:#000;font-size:24px;font-weight:900;line-height:1.2;margin:0;max-width:191px}
 .elements__like-button{align-self:center;background:url(images/__like-disabled.f9cbbc232f4ed178be38.svg) 50% no-repeat;border:none;height:19px;padding:0;transition:opacity .5s ease-out;width:22px}.elements__like-button:hover{cursor:pointer;opacity:.5}
 .elements__like-section{display:flex;flex-direction:column}
-.elements__like-counter{font-size:13px;font-style:normal;font-weight:400;line-height:16px;margin:3px 0 0;text-align:center}
 .elements__like-button_disabled{background:url(images/__like-active.35948469632d0421d697.svg) 50% no-repeat;opacity:1}
 .footer{padding-bottom:60px;width:68.75%}@media (max-width:975px){.footer{width:85%}}@media (max-width:768px){.footer{padding-bottom:36px;width:88%}}
 .footer__text{color:#545454;font-size:18px;font-weight:400;line-height:1.22;margin:0}@media (max-width:768px){.footer__text{font-size:14px;line-height:1.21}}
@@ -42,4 +41,5 @@
 .popup__opened-image{display:block;max-height:75vh;max-width:75vw}
 .popup__opened-title{font-size:12px;font-weight:400;line-height:1.25;margin:0;padding-top:10px}
 .popup_type_image{background:rgba(0,0,0,.9)}
+.elements__like-counter{color:#000;font-family:Inter;font-size:13px;font-style:normal;font-weight:400;line-height:16px;margin:3px 0 0;text-align:center}
 
