--- a/main.css
+++ b/main.css
@@ -24,7 +24,7 @@
 .elements__caption{color:#000;font-size:24px;font-weight:900;line-height:1.2;margin:0;max-width:191px}
 .elements__like-button{align-self:center;background:url(images/like-disabled.f9cbbc232f4ed178be38.svg) 50% no-repeat;border:none;height:19px;padding:0;transition:opacity .5s ease-out;width:22px}.elements__like-button:hover{cursor:pointer;opacity:.5}
 .elements__like-section{display:flex;flex-direction:column}
-.elements__like-button_disabled{background:url(images/__like-active.35948469632d0421d697.svg) 50% no-repeat;opacity:1}
+.elements__like-button_disabled{background:url(images/like-active.35948469632d0421d697.svg) 50% no-repeat;opacity:1}
 .footer{padding-bottom:60px;width:68.75%}@media (max-width:975px){.footer{width:85%}}@media (max-width:768px){.footer{padding-bottom:36px;width:88%}}
 .footer__text{color:#545454;font-size:18px;font-weight:400;line-height:1.22;margin:0}@media (max-width:768px){.footer__text{font-size:14px;line-height:1.21}}
 .popup{align-items:center;background:rgba(0,0,0,.5);display:flex;height:100%;justify-content:center;left:0;opacity:0;position:fixed;top:0;transition:visibility .4s,opacity .5s linear;visibility:hidden;width:100%}
