--- a/src/blocks/popup/__close/popup__close.css
+++ b/src/blocks/popup/__close/popup__close.css
@@ -1,5 +1,5 @@
 .popup__close {
-	background-image: url("../../../images/__close1.svg");
+	background-image: url(../../../images/close1.svg);
 	background-color: transparent;
 	width: 32px;
 	height: 32px;
