--- a/src/blocks/elements/__like-button/_disabled/elements__like-button_disabled.css
+++ b/src/blocks/elements/__like-button/_disabled/elements__like-button_disabled.css
@@ -1,4 +1,4 @@
 .elements__like-button_disabled {
-  background: url(../../../../images/__like-active.svg) center no-repeat;
+  background: url(../../../../images/like-active.svg) center no-repeat;
   opacity: 1;
 }
