--- a/src/blocks/profile/__add-button/profile__add-button.css
+++ b/src/blocks/profile/__add-button/profile__add-button.css
@@ -3,7 +3,7 @@
 	min-height: 50px;
 	border: 0;
 	padding: 0;
-	background-image: url('../../../images/__add-button1.svg');
+	background-image: url(../../../images/add-button1.svg);
 	background-color: #000;
 	transition: opacity 0.5s ease-out;
 }
@@ -15,7 +15,7 @@
 
 @media (max-width: 695px) {
 	.profile__add-button {
-		background-image: url('../../../images/__add-button2.svg');
+		background-image: url(../../../images/add-button2.svg);
 		min-width: 282px;
 	}
 }
