--- a/src/blocks/profile/__edit-button/profile__edit-button.css
+++ b/src/blocks/profile/__edit-button/profile__edit-button.css
@@ -4,7 +4,7 @@
 	width: 24px;
 	height: 24px;
 	border: 0;
-	background-image: url('../../../images/__edit-button1.svg');
+	background-image: url(../../../images/edit-button1.svg);
 	background-color: #000;
 	transition: opacity 0.5s ease-out;
 }
